--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,11 @@
 	position: relative;
 }
 
-.App .result {
+/* .App .result {
 	text-align: center;
-}
+} */
 
-.App .result button {
+/* .App .result button {
 	font-weight: bold;
 	font-family: 'Nunito', sans-serif;
 	border-radius: 30px;
@@ -21,31 +21,15 @@
 	color: #fff;
 	margin-top: 20px;
 	cursor: pointer;
-}
+} */
 
-.App .result h2 {
+/* .App .result h2 {
 	margin-bottom: 0;
-}
+} */
 
-.App .result img {
+/* .App .result img {
 	width: 150px;
-}
-
-.App .progress {
-	height: 10px;
-	border-radius: 30px;
-	background-color: #e8e8e8;
-	margin-bottom: 25px;
-}
-
-.App .progress__inner {
-	height: 100%;
-	border-radius: 30px;
-	width: 80%;
-	background: #12e730;
-	transition: all 0.3s ease-in-out;
-	background: linear-gradient(90deg, rgba(18, 231, 48, 1) 0%, rgba(0, 212, 255, 1) 100%);
-}
+} */
 
 .App:before, .App:after {
 	content: '';
@@ -71,26 +55,3 @@
 	background-color: rgba(255, 255, 255, 0.3);
 	z-index: 1;
 }
-
-.App h1 {
-	margin: 0;
-}
-
-.App ul {
-	list-style: none;
-	padding: 0;
-}
-
-.App ul li {
-	padding: 15px;
-	border: 2px solid rgba(0, 0, 0, 0.1);
-	border-radius: 15px;
-	margin-bottom: 10px;
-	cursor: pointer;
-	transition: all 0.1s ease-in-out;
-}
-
-.App ul li:hover {
-	border: 2px solid rgba(0, 0, 0, 0.3);
-}
- 
